--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>HI!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Master1wistCode</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="menu"></div>
+      <div class="header"></div>
+      <div class="hero_content">
+        <div class="hero_content1">
+          <div class="content1_image"></div>
+          <div class="content1_text"></div>
+        </div>
+        <div class="hero_content2">
+          <div class="content2_text"></div>
+          <div class="content2_image"></div>
+        </div>
+        <div class="hero_content3">
+          <div class="content3_image"></div>
+          <div class="content3_text"></div>
+        </div>
+      </div>
+      <div class="footer"></div>
+    </div>
+  </body>
+</html>
