--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Master1wistCode</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <div class="menu"></div>
-      <div class="header"></div>
+      <div class="menu">
+        <a href="#" class="menu_home active">Home</a>
+        <a href="about.html" class="menu_about">About</a>
+        <a href="contact.html" class="menu_contact">Contact</a>
+        <a href="blog.html" class="menu_blog">Blogs</a>
+        <a href="tutorial.html" class="menu_tutorial" id="right"
+          >Tutorials on Coding!</a
+        >
+      </div>
+      <div class="header">
+        <img src="img/hero_img.jpg" alt="Hero Image" />
+      </div>
       <div class="hero_content">
         <div class="hero_content1">
           <div class="content1_image"></div>
