--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
       </div>
       <div class="header">
-        <img src="img/hero_img.jpg" alt="Hero Image" />
+        <h1>Hi! I am Riyasat Hossain!</h1>
       </div>
       <div class="hero_content">
         <div class="hero_content1">
