--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarMenu">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link active">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">About</a>
