--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <li class="nav-item">
             <a href="#" class="nav-link">Contact</a>
           </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Let's Be Friends!</a>
+          </li>
         </ul>
       </div>
     </nav>
