--- a/index.html
+++ b/index.html
@@ -10,16 +10,31 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <article id="home">
-      <section>
-        <h1>Hello!</h1>
-        <p>My name is Riyasat Hossain.</p>
-        <p>A student, front-end web-developer, and a UX/UI Designer</p>
-      </section>
-    </article>
+    <nav class="menu">
+      <h4 class="logo">RisenFromDarkness</h4>
+      <div class="nav-lists">
+        <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Portfolio</a></li>
+        </ul>
+      </div>
+    </nav>
+    <header id="home">
+      <h1>Hello!</h1>
+      <p>My name is Riyasat Hossain.</p>
+      <p>A student, front-end web-developer, and a UX/UI Designer</p>
+    </header>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
